2025-02-09T01:44:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13221209216 # 560
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-09
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 61 105 / 62 106
* notice: next accum: outdated-unq outdated-all / unq all: 62 106 / 63 107
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-11-19] / [2025-02-08]

2024-11-20T00:57:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11924616424 # 485
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-20
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 60 104 / 61 105
* notice: next accum: outdated-unq outdated-all / unq all: 61 105 / 62 106
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-10-01] / [2024-11-19]

2024-10-02T00:54:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11135915149 # 436
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-02
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 59 103 / 60 104
* notice: next accum: outdated-unq outdated-all / unq all: 60 104 / 61 105
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-08-07] / [2024-10-01]

2024-08-20T01:25:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10463637493 # 393